fixed dropdown menu bug with overlapping div elements

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,7 @@ main {
   justify-content: center;
   margin-top: 0%;
 }
+
+.hero {
+  margin-top: 200px;
+}
